<resources>
    <string name="app_name">ChatFree</string>
    <string name="action_settings">Settings</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Type your Password</string>
    <string name="login">Login</string>
    <string name="login_register">SIGN UP For Free</string>
    <string name="register">Sign Up</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
</resources>
