<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dasd"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_avg"
    android:weightSum="1">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:fontFamily="@font/alfa_slab_one"
        android:text="ChatFree"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_weight="0.06"
        app:srcCompat="@drawable/ff" />


    <EditText
        android:id="@+id/edit_text_email_id"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="0.06"
        android:background="@drawable/chat_rounded_rect_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/pink_A400"
        android:textColorHint="#85252525" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="0.06"
        android:background="@drawable/chat_rounded_rect_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/pink_A400"
        android:textColorHint="#95333232" />

    <Button
        android:id="@+id/button_login"
        style="?attr/borderlessButtonStyle"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#2C2B2C"
        android:drawablePadding="5dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_register"
        style="?attr/borderlessButtonStyle"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#202020"
        android:text="@string/login_register"
        android:textColor="@color/white" />




</LinearLayout>