<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dasd"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_avg">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="191dp"
        app:srcCompat="@drawable/ff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/aclonica"
        android:padding="8dp"
        android:text="SIGN UP HERE"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_text_email_id"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingLeft="15dp"
        android:background="@drawable/chat_rounded_rect_bg"
        android:textColor="@color/pink_A400"
        android:textColorHint="#413F40" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="378dp"
        android:layout_height="61dp"

        android:background="@drawable/chat_rounded_rect_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="15dp"

        android:textColor="@color/pink_A400"
        android:textColorHint="#363535" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_register"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="#252525"
            android:padding="20dp"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>


</LinearLayout>